funciona el responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-slate-200 dark:bg-slate-900 dark:border-none dark:text-white text-black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
