organizando un poco la semantica y el responsive

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root" class="bg-slate-200 dark:bg-slate-900 dark:border-none dark:text-white text-black"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React</title>
+</head>
+
+<body>
+  <section id="root"
+    class="flex min-h-screen
+    bg-slate-200 dark:bg-slate-900 dark:border-none dark:text-white text-black">
+  </section>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
