agregando icon y title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>App Metas Gane</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     class="flex min-h-screen
     bg-slate-200 dark:bg-slate-900 dark:border-none dark:text-white text-black">
   </section>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
