crear navbar primero

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Proyecto Metas</title>
   </head>
   <body>
-    <div id="root"></div>
+    <section id="root" class="flex w-screen h-screen"></section>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
